--- a/course/index.html.html
+++ b/course/index.html.html
@@ -6,4 +6,4 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/EQlua9LvjrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<p> <a href="https://instagram.com/karunakar_sarella?igshid=YmMyMTA2M2Y="> <img src="kar.jpg"></a></p>
 	</body>
-    b b b b
+</html>
